# rules_nixpkgs

core/extensions/: repository.bzl
testing/go-bzlmod/: MODULE.bazel
testing/go-bzlmod/tests/: nixpkgs_repositories.bzl
toolchains/cc/extensions/: BUILD.bazel  toolchain.bzl
toolchains/go/extensions/: BUILD.bazel  toolchain.bzl
toolchains/java/: MODULE.bazel
toolchains/java/extensions/: BUILD.bazel  toolchain.bzl
