module(name = "rules_nixpkgs_go_testing")

bazel_dep(name = "rules_nixpkgs_go")
local_path_override(
    module_name = "rules_nixpkgs_go",
    path = "../../toolchains/go",
)

bazel_dep(name = "rules_nixpkgs_core")
local_path_override(
    module_name = "rules_nixpkgs_core",
    path = "../../core",
)

bazel_dep(name = "rules_nixpkgs_cc")
local_path_override(
    module_name = "rules_nixpkgs_cc",
    path = "../../toolchains/cc",
)

bazel_dep(name = "rules_nixpkgs_java")
local_path_override(
    module_name = "rules_nixpkgs_java",
    path = "../../toolchains/java",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_cc", version = "0.0.9")

# TODO[AH] Remove these transitive dependencies once nixpkgs_java_configure has
#   become a module extension in rules_nixpkgs_java.
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_java", version = "7.3.1")

go_toolchain = use_extension("@rules_nixpkgs_go//extensions:toolchain.bzl", "go_toolchain")
go_toolchain.flake(
    name = "nixpkgs_go_sdk",
    lock_file = "//:flake.lock",
)
use_repo(go_toolchain, "nixpkgs_go_sdk_toolchains")
register_toolchains("@nixpkgs_go_sdk_toolchains//:all")

# The Go toolchain requires a CC toolchain.
cc_toolchain = use_extension("@rules_nixpkgs_cc//extensions:toolchain.bzl", "cc_toolchain")
cc_toolchain.flake(
    name = "nixpkgs_config_cc",
    lock_file = "//:flake.lock",
)
use_repo(cc_toolchain, "nixpkgs_config_cc", "nixpkgs_config_cc_info")
# Note: CC toolchain registration is handled by the nixpkgs_cc_configure function
# register_toolchains("@nixpkgs_config_cc//:toolchain")

# Bazel requires a Java runtime to run tests.
java_toolchain = use_extension("@rules_nixpkgs_java//extensions:toolchain.bzl", "java_toolchain")
java_toolchain.flake(
    name = "nixpkgs_java_runtime",
    lock_file = "//:flake.lock",
)
use_repo(java_toolchain, "nixpkgs_java_runtime", "nixpkgs_java_runtime_toolchain")
register_toolchains("@nixpkgs_java_runtime_toolchain//:all")
