load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:sets",
        "@rules_nixpkgs_core//:nixpkgs",
        "//:java",
    ],
)